# pico_tower_fan

./: CMakeLists.txt  README.md  compile.sh  compile_commands.json  display_driver.c  display_driver.h  main.c  serialmonitor.sh
.cache/clangd/index/: display_driver.h.4FE10E3A52F95D36.idx  main.c.822DC189168CEFA8.idx
